<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pastelBackground">

    <!-- Main content layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">

        <!-- Toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />


        <!-- Welcome message -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_pet_mate"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp" />

        <!-- Image view -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@drawable/pet_image"

            android:layout_gravity="center" />

        <!-- Spacer view to push buttons to the bottom -->
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <!-- Button: Add New Friend -->
        <Button
            android:id="@+id/addNewFriendButton"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/add_new_friend"/>

        <!-- Button: Check On My Friends -->
        <Button
            android:id="@+id/checkOnMyFriends"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/check_on_my_friends"/>

        <!-- Button: Check On My Feed -->
        <Button
            android:id="@+id/checkOnMyFeed"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/check_on_my_feed"/>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu" />

</androidx.drawerlayout.widget.DrawerLayout>
